--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
   <head>
+    <!-- Include the Google API library -->
+    <script src="https://apis.google.com/js/api.js"></script>
     <!-- Include the Google Sign-In library -->
-<script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+  </head>
   <body>
-  	<div class="g-signin2" data-clientid="507194984666-stfs0ciqi1h2h7qt7vetomll6qaq0pd3" data-onsuccess="onSignIn"></div>
-	<button id="onSignIn">Sign in</button>
+    <div class="g-signin2" data-clientid="507194984666-stfs0ciqi1h2h7qt7vetomll6qaq0pd3" data-onsuccess="onSignIn"></div>
+    <button id="signout-button">Sign out</button>
 
     <!-- Your page content goes here -->
   </body>
   <script>
-    // Handle the sign-in response
+    // Combine the two onSignIn functions
     function onSignIn(googleUser) {
       var id_token = googleUser.getAuthResponse().id_token;
       console.log(id_token);
@@ -17,18 +20,19 @@
       // Send the id_token to your server
       fetch('http://localhost:80', {
         method: 'POST',
-        body: JSON.stringify({id_token: id_token}),
+        body: JSON.stringify({ id_token: id_token }),
         headers: {
           'Content-Type': 'application/json'
         }
       });
+
+      // Add event listener for signout-button
+      document.getElementById('signout-button').addEventListener('click', function () {
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+          console.log('User signed out.');
+        });
+      });
     }
-	 function onSignIn(googleUser) {
-	document.getElementById('signout-button').addEventListener('click', function() {
-  var auth2 = gapi.auth2.getAuthInstance();
-  auth2.signOut().then(function () {
-    console.log('User signed out.');
-  });
-});
   </script>
 </html>
