--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta name="google-signin-client_id" content="507194984666-8ru5okmel584gjadh852spk3gcr9mld0.apps.googleusercontent.com">
 </head>
 <body>
