--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <div id="my-signin2"></div>
   <script>
     function onSuccess(googleUser) {
-      console.log('Logged in as: ' + googleUser);
       console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
     }
+
     function onFailure(error) {
-      console.log('Logged in as: ' + googleUser);
-      console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
-      console.log(error);
+      console.error('Failed to log in:', error);
     }
+
     function renderButton() {
       gapi.signin2.render('my-signin2', {
         'scope': 'profile email',
@@ -28,5 +27,15 @@
   </script>
 
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script>
+    // This will load the Google API platform and call renderButton() when it's ready
+    window.onload = function () {
+      gapi.load('auth2', function () {
+        gapi.auth2.init({
+          client_id: '507194984666-8ru5okmel584gjadh852spk3gcr9mld0',
+        }).then(renderButton);
+      });
+    };
+  </script>
 </body>
 </html>
