--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     }
 
     function renderButton() {
+      console.log("Rendering button");
       gapi.signin2.render('my-signin2', {
         'scope': 'profile email',
         'width': 240,
@@ -30,7 +31,9 @@
     }
 
     window.onload = function () {
+      console.log("Window loaded");
       gapi.load('auth2', function () {
+        console.log("Auth2 loaded");
         gapi.auth2.init({
           client_id: '507194984666-8ru5okmel584gjadh852spk3gcr9mld0',
         }).then(renderButton);
